--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <a href="" class="nav-brand">Github finder</a>
       <ul>
         <li class="nav-item"><a href="about.html">About us</a></li>
-        <li><a href="" class="nav-item btn btn-default">Register</a></li>
+        <li><a href="" class="nav-item btn btn-default">Register</a></li>\
+          <li><b> GITHUB BASIC AUTHENTICATION </b></li>
       </ul>
     </nav>
 
