--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li class="nav-item"><a href="about.html">About us</a></li>
         <li><a href="" class="nav-item btn btn-default">Register</a></li>\
-          <li><b> GITHUB BASIC AUTHENTICATION </b></li>
+          <li><b> <a href="basicauth.html">GITHUB BASIC AUTHENTICATION</a></b></li>
       </ul>
     </nav>
 
