--- a/basicauth.html
+++ b/basicauth.html
@@ -49,7 +49,7 @@
         <br> <br>
         <small style="margin: 6px;">Need a token? &nbsp;&nbsp; (<a href="https://github.com/settings/tokens/new"><b>Generate it here on Github!</b></a> <br><br><i> (it will ask you for scopes; we only need <u>read access</u> for scope: <u>"public_repo"</u></i> </small>
         <br> <br>
-        <input type="button" id="btnGo" value="Get Repos" />
+        <input type="button" id="btnGo" value="Get My Gists" />
         <br clear="both"> <br>
     </div>
 
@@ -89,8 +89,10 @@
                     }
                 });
 
-
-            //doesn't even use the token yet but I'm tired lol 
+            //
+            //
+            //
+            //doesn't even use the auth token yet but I'm tired lol
 
         })
     </script>
