--- a/index.html
+++ b/index.html
@@ -30,4 +30,6 @@
         <a href="contact.html" target="_blank">Contact us</a>
     </footer>
 </body>
+<script src="index.js" type="text/javascript"></script>
+
 </html>
