--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a href="" class="nav-brand">Repo finder</a>
       <ul>
         <li class="nav-item"><a href="about.html">About us</a></li>
-        <li><a href="" class="nav-item btn btn-default">Register</a></li>\
+        <li><a href="" class="nav-item btn btn-default">Register</a></li>
       </ul>
     </nav>
 
